Updated: Racer List

--- a/core/html/design.less
+++ b/core/html/design.less
@@ -414,8 +414,8 @@ button:focus {
     outline: none;
 }
 
-input[type="submit"] {
-  color: @c1;
+input[type="submit"], .new_button {
+   color: @c1;
    margin: 15px 0 15px 0;
    border-radius: 5px;
    border: none;
