--- a/core/html/design.less
+++ b/core/html/design.less
@@ -604,7 +604,7 @@ div.but_menu {.menubuttons; float:right; font-size: 1em;}
 @colw: 100%;
 .content {position:absolute; min-width: 260px; width: @colw; height: 100%;
     border-left: @border; border-right: @border; overflow-y: auto;
-    transition: width 200ms ease, left 200ms ease;} 
+    transition: width 1200ms ease, left 1200ms ease;} 
 
 div.content0 {.content; left: 0%;}
 div.content1 {.content; left: 25%;}
@@ -632,6 +632,7 @@ border-bottom: @border; text-align:center;}
 .li_firstline {}
 .li_secondline {color: @c5;}
 .listitem:hover {background: @c1;}
+li:hover {background: @c1;}
 
 .racerdetail {height: @tile-height; border-bottom: @border; }
 .racerpic {height: 120px; width: 120px; margin: 15px; float: left; overflow: hidden; border-radius: 60px;}
