--- a/core/html/design.css
+++ b/core/html/design.css
@@ -191,7 +191,7 @@ li {
 }
 .middle_info {
   height: 44px;
-  margin: 0px 44px;
+  margin: 0px 84px 0 44px;
   padding: 0 15px;
   text-align: left;
 }
@@ -437,7 +437,8 @@ textarea:focus,
 button:focus {
   outline: none;
 }
-input[type="submit"] {
+input[type="submit"],
+.new_button {
   color: #ffffff;
   margin: 15px 0 15px 0;
   border-radius: 5px;
@@ -642,7 +643,7 @@ div.but_menu {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   overflow-y: auto;
-  transition: width 200ms ease, left 200ms ease;
+  transition: width 1200ms ease, left 1200ms ease;
 }
 div.content0 {
   position: absolute;
@@ -652,7 +653,7 @@ div.content0 {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   overflow-y: auto;
-  transition: width 200ms ease, left 200ms ease;
+  transition: width 1200ms ease, left 1200ms ease;
   left: 0%;
 }
 div.content1 {
@@ -663,7 +664,7 @@ div.content1 {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   overflow-y: auto;
-  transition: width 200ms ease, left 200ms ease;
+  transition: width 1200ms ease, left 1200ms ease;
   left: 25%;
 }
 div.content2 {
@@ -674,7 +675,7 @@ div.content2 {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   overflow-y: auto;
-  transition: width 200ms ease, left 200ms ease;
+  transition: width 1200ms ease, left 1200ms ease;
   left: 50%;
 }
 div.content3 {
@@ -685,7 +686,7 @@ div.content3 {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   overflow-y: auto;
-  transition: width 200ms ease, left 200ms ease;
+  transition: width 1200ms ease, left 1200ms ease;
   left: 75%;
 }
 div.content_menu_spacer {
@@ -729,6 +730,9 @@ div.content_menu_spacer {
   color: #999999;
 }
 .listitem:hover {
+  background: #ffffff;
+}
+li:hover {
   background: #ffffff;
 }
 .racerdetail {
