preparation for candik

--- a/core/html/design.less
+++ b/core/html/design.less
@@ -64,11 +64,11 @@ table {
 
 @g1: #f7f7f7;
 
-@font: 12pt 'Open Sans', sans-serif, Helvetica, ;
+@font: 12pt 'Open Sans', Helvetica, sans-serif, ;
 
 @border: 1px solid @c5;
 
-@line-height: 44px;
+@line-height: 49px;
 @tile-height: 149px;
 @letter-spacing: 1px;
 
