--- a/core/html/design.css
+++ b/core/html/design.css
@@ -133,7 +133,7 @@ h1 {
   padding: 0px 15px;
   background-color: #333333;
   text-transform: uppercase;
-  font-style: 12pt 'Open Sans', sans-serif, Helvetica;
+  font-style: 12pt 'Open Sans', Helvetica, sans-serif;
 }
 h1.sub {
   color: #cccccc;
@@ -144,7 +144,7 @@ html,
 body {
   height: 100%;
   background-color: #f5f5f5;
-  font-style: 12pt 'Open Sans', sans-serif, Helvetica;
+  font-style: 12pt 'Open Sans', Helvetica, sans-serif;
 }
 li {
   height: 44px;
@@ -239,7 +239,7 @@ th {
 }
 th,
 tr {
-  line-height: 44px;
+  line-height: 49px;
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #ffffff;
@@ -566,8 +566,8 @@ p.racer_tasklist_heading {
 /* End of gianfett CSS */
 .menubuttons {
   color: #cccccc;
-  min-width: 44px;
-  height: 44px;
+  min-width: 49px;
+  height: 49px;
   border-right: 1px solid #999999;
   border-left: 1px solid #999999;
   cursor: default;
@@ -581,7 +581,7 @@ body html {
 }
 body {
   margin: 0px;
-  font: 12pt 'Open Sans', sans-serif, Helvetica;
+  font: 12pt 'Open Sans', Helvetica, sans-serif;
   color: #333333;
 }
 a.ohne {
@@ -603,7 +603,7 @@ a.ohne {
   width: 100%;
   top: 0px;
   z-index: 100;
-  height: 44px;
+  height: 49px;
   background: #333333;
   border-bottom: 1px solid #999999;
   text-align: center;
@@ -613,8 +613,8 @@ div.title {
 }
 div.but_back {
   color: #cccccc;
-  min-width: 44px;
-  height: 44px;
+  min-width: 49px;
+  height: 49px;
   border-right: 1px solid #999999;
   border-left: 1px solid #999999;
   cursor: default;
@@ -624,8 +624,8 @@ div.but_back {
 }
 div.but_menu {
   color: #cccccc;
-  min-width: 44px;
-  height: 44px;
+  min-width: 49px;
+  height: 49px;
   border-right: 1px solid #999999;
   border-left: 1px solid #999999;
   cursor: default;
@@ -690,7 +690,7 @@ div.content3 {
   left: 75%;
 }
 div.content_menu_spacer {
-  height: 44px;
+  height: 49px;
 }
 transition {
   width: 200ms ease, left 200ms ease;
@@ -698,18 +698,18 @@ transition {
 }
 div.headspacer {
   width: 100%;
-  height: 44px;
+  height: 49px;
 }
 div.content_menu_spacer {
   height: 55px;
 }
 .search {
-  height: 44px;
+  height: 49px;
   border-bottom: 1px solid #999999;
   text-align: center;
 }
 .listitem {
-  height: 44px;
+  height: 49px;
   padding: 0 5px;
   background: linear-gradient(#ffffff, #f2f2f2);
   border-bottom: 1px solid #999999;
