--- a/core/html/design.less
+++ b/core/html/design.less
@@ -45,7 +45,19 @@ table {
 
 /* End of CSS Reset*/
 
+// Icon Fonts
+@font-face {
+	font-family: 'icomoon';
+	src:url('../../icons/icomoon/fonts/icomoon.eot?77g9ef');
+	src:url('../../icons/icomoon/fonts/icomoon.eot?#iefix77g9ef') format('embedded-opentype'),
+		url('../../icons/icomoon/fonts/icomoon.woff?77g9ef') format('woff'),
+		url('../../icons/icomoon/fonts/icomoon.ttf?77g9ef') format('truetype'),
+		url('../../icons/icomoon/fonts/icomoon.svg?77g9ef#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
+// Less variables
 
 @c1: #FFFFFF;
 @degrade: @c1 / 10;
@@ -72,6 +84,7 @@ table {
 @border: 1px solid @c5;
 
 @line-height: 49px;
+@line-height-ranking: 64px;
 @tile-height: 149px;
 @letter-spacing: 1px;
 
@@ -153,19 +166,12 @@ li {
 
 .middle_info {
     height: @line-height;
-    margin: 0px 84px 0 @line-height;
+    margin: 0px 108px 0 @line-height;
     padding: 0 15px;
     text-align: left;
 }
 
-.right_info {
-    position: absolute;
-    right: 0px;
-    top: 5px;
-}
-
 .middle_info p.title {
-  padding-bottom: 2px;
   font-size: 1.2em;
   color: @c9;
   letter-spacing: @letter-spacing;
@@ -176,17 +182,17 @@ li {
     color: @c4;
 }
 
-.middle_info .rider_city_country {
-  color: @c4;
-  font-size: 1em;
-}
-
 .middle_info .title, .middle_info .description{
  overflow: hidden;
  white-space:nowrap;
  text-overflow: ellipsis;
 }
 
+.right_info {
+    position: absolute;
+    right: 0px;
+    top: 5px;
+}
 
 .right_info .rider_number {
   font-size: 3em;
@@ -197,6 +203,14 @@ li {
   letter-spacing: @letter-spacing;
   margin-top: -6px;
 }
+
+.right_info .rider_number::after {
+ content: "\e60f";
+    font-family: 'icomoon';
+    color: @c5;
+    font-size: 0.6em;
+}
+
 
 //Tables
 
@@ -403,6 +417,65 @@ background-position: center center;
 background-size: 15px; 
 }
 
+//Racer List
+
+.left_info{
+&.racer_racing{
+    border: 3px solid @c_pos;
+}
+&.racer_finished{
+    border: 3px solid blue;
+}
+&.racer_registered{
+    border: 3px solid red;
+}
+}
+
+
+//Racer Ranking
+
+#racerranking li{
+    height: @line-height-ranking;
+}
+
+#racerranking .middle_info {
+    height: 48px;
+}
+
+#racerranking .middle_info.racer_ranking_points{
+    height: 22px;
+    line-height: 0.9em;  
+    color: @c5;
+}
+
+#racerranking .title {
+    font-size: 1.1em; 
+}
+
+#racerranking p.description {
+    font-size: 0.9em; 
+}
+
+span.racer_ranking{
+    margin-right: 8px;
+}
+
+span.racer_ranking::before{
+    content: "\e608";
+    font-family: 'icomoon';
+    color: @c5;
+    margin-right: 5px;
+    font-size: 0.9em;
+}
+
+span.racer_points::before{
+    content: "\e601";
+    font-family: 'icomoon';
+    color: @c5;
+    margin-right: 3px;
+    font-size: 0.9em;
+}
+
 // Racer Registration
 
 .top_content_wrapper.registration > div > div.left_info {
@@ -496,36 +569,6 @@ border-radius: 50px;
 background-color: lighten(@c2, 6%);
 }
 
-//Rider Task List
-
-.rider_task_list {
-    padding: 0 15px;
-    background-color: @g1;
-}
-
-#riderlist li{
-    padding: 5.5px 0;
-    border-bottom: 1px solid @c2;
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: 16px;
-}
-
-#riderlist li:first-child{
-    border-top: 1px solid @c2;
-}
-
-#riderlist .left_info {
-    margin-left: 5px;
-    }
-
-#riderlist .right_info {
-    float: right;
-    margin-right: 5px;
-}
-
-
-
 // Tasklist
 
 #tasklist{
@@ -542,7 +585,7 @@ background-color: lighten(@c2, 6%);
 }
         
 
-// Checkpoint Rider Task List
+// Checkpoint Racer Task List
 
 p.racer_checkpointlist_heading, p.racer_tasklist_heading{
 display: inline-block;
