--- a/core/html/design.less
+++ b/core/html/design.less
@@ -594,7 +594,7 @@ padding: 5px 0;
 
 // Manifest List
 
-#tasklist_race, #taskdispatch_dispatch, #racertask_racertask{
+#tasklist_race, #taskdispatch_dispatch, #racertask_racertask, #racerdispatch_dispatch{
 .manifest_number{
 color: @c1;
 font-size: 24px;
