--- a/core/html/design.css
+++ b/core/html/design.css
@@ -553,7 +553,8 @@ p.racer_tasklist_heading {
 }
 #tasklist_race .manifest_number,
 #taskdispatch_dispatch .manifest_number,
-#racertask_racertask .manifest_number {
+#racertask_racertask .manifest_number,
+#racerdispatch_dispatch .manifest_number {
   color: #ffffff;
   font-size: 24px;
   font-weight: bold;
@@ -566,14 +567,16 @@ p.racer_tasklist_heading {
 }
 #tasklist_race .right_info,
 #taskdispatch_dispatch .right_info,
-#racertask_racertask .right_info {
+#racertask_racertask .right_info,
+#racerdispatch_dispatch .right_info {
   text-align: left;
   width: 100px;
   margin-right: 20px;
 }
 #tasklist_race .right_info .manifest_points:before,
 #taskdispatch_dispatch .right_info .manifest_points:before,
-#racertask_racertask .right_info .manifest_points:before {
+#racertask_racertask .right_info .manifest_points:before,
+#racerdispatch_dispatch .right_info .manifest_points:before {
   content: "\e601";
   font-family: 'icomoon';
   color: #999999;
@@ -582,7 +585,8 @@ p.racer_tasklist_heading {
 }
 #tasklist_race .right_info .manifest_maxduration:before,
 #taskdispatch_dispatch .right_info .manifest_maxduration:before,
-#racertask_racertask .right_info .manifest_maxduration:before {
+#racertask_racertask .right_info .manifest_maxduration:before,
+#racerdispatch_dispatch .right_info .manifest_maxduration:before {
   content: "\e606";
   font-family: 'icomoon';
   color: #999999;
